[project]
name = "house-price-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn==1.6.1",
    "streamlit>=1.58.0",
    "xgboost>=3.2.0",
]
